[gd_scene load_steps=11 format=3 uid="uid://8wklr8e4ou54"]

[ext_resource type="Script" path="res://assets/scenes/ui/questUI/questNotification.gd" id="1_h5abd"]
[ext_resource type="FontFile" uid="uid://xmwjvmqspojb" path="res://assets/fonts/Grand_Aventure_Text.otf" id="2_hc654"]
[ext_resource type="FontFile" uid="uid://b3s7umd01feyu" path="res://assets/fonts/Carthage Pro Regular.ttf" id="3_ybnau"]
[ext_resource type="AudioStream" uid="uid://by5epqyt6w7ls" path="res://assets/sounds/ui/smcknecksound.wav" id="4_uk6ft"]
[ext_resource type="AudioStream" uid="uid://c7v7iev137c2t" path="res://assets/sounds/ui/notif2_new.wav" id="5_ynrl5"]

[sub_resource type="Gradient" id="Gradient_n5quf"]
offsets = PackedFloat32Array(0, 0.370213, 0.629787, 1)
colors = PackedColorArray(0.27451, 0, 0, 1, 0.603922, 0, 0, 1, 0.466667, 0, 0, 1, 0.313726, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_rntfv"]
gradient = SubResource("Gradient_n5quf")

[sub_resource type="Animation" id="Animation_dss2v"]
resource_name = "entry"
length = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 4, 5),
"transitions": PackedFloat32Array(0.0947323, 0.183011, 2.63902, 1),
"update": 0,
"values": [Vector2(83, 149), Vector2(694, 149), Vector2(694, 149), Vector2(79, 149)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("contractName:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.5, 2.4, 4, 5),
"transitions": PackedFloat32Array(0.0490366, 1, 1, 3.24901, 1),
"update": 0,
"values": [Vector2(3, 0), Vector2(79, 0), Vector2(81, 0), Vector2(81, 0), Vector2(-661, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("contractStatus:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.5, 1.5),
"transitions": PackedFloat32Array(0.0824694, 1),
"update": 0,
"values": [Vector2(82, 14), Vector2(82, 71)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("contractStatus:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.6, 1.1, 4, 5),
"transitions": PackedFloat32Array(0.535887, 1, 0.189465, 1),
"update": 0,
"values": [Color(0.631373, 0, 0, 0), Color(0.631373, 0, 0, 1), Color(0.631373, 0, 0, 1), Color(0.631373, 0, 0, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("flash:size")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.9),
"transitions": PackedFloat32Array(0.0245183, 0.0507658),
"update": 0,
"values": [Vector2(410, 235), Vector2(786, 149)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("flash:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 2.4),
"transitions": PackedFloat32Array(0.0245183, 0.0507658),
"update": 0,
"values": [Vector2(0, -22), Vector2(0, 0)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("flash:color")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 1.6),
"transitions": PackedFloat32Array(0.0824694, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("notifStart:playing")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("notifAppear:playing")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0.6),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath(".:modulate")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0, 4, 5),
"transitions": PackedFloat32Array(1, 1, 1.51572),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_8a5q2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(694, 149)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("contractName:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(79, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("contractStatus:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(82, 71)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("contractStatus:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.631373, 0, 0, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("flash:size")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(410, 148)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("flash:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -22)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("flash:color")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("notifStart:playing")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("notifAppear:playing")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath(".:modulate")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ha6gl"]
_data = {
"RESET": SubResource("Animation_8a5q2"),
"entry": SubResource("Animation_dss2v")
}

[node name="questNotification" type="Panel"]
self_modulate = Color(1, 1, 1, 0.741176)
offset_right = 694.0
offset_bottom = 149.0
script = ExtResource("1_h5abd")

[node name="contractStatus" type="Label" parent="."]
modulate = Color(0.631373, 0, 0, 1)
layout_mode = 0
offset_left = 82.0
offset_top = 71.0
offset_right = 571.0
offset_bottom = 139.999
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 7
theme_override_fonts/font = ExtResource("2_hc654")
theme_override_font_sizes/font_size = 55
text = "CONTRACT COMPLETED"
vertical_alignment = 1

[node name="contractName" type="Label" parent="."]
layout_mode = 0
offset_left = 79.0
offset_right = 687.0
offset_bottom = 69.0
theme_override_fonts/font = ExtResource("3_ybnau")
theme_override_font_sizes/font_size = 61
text = "CONTRACT NAME"
vertical_alignment = 1

[node name="textureRect" type="TextureRect" parent="."]
self_modulate = Color(1, 1, 1, 0.603922)
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 79.0
grow_vertical = 2
texture = SubResource("GradientTexture2D_rntfv")

[node name="questNotifIcon" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 5.0
offset_top = 41.0
offset_right = 76.0
offset_bottom = 112.0

[node name="animationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ha6gl")
}

[node name="flash" type="ColorRect" parent="."]
layout_mode = 0
offset_top = -22.0
offset_right = 410.0
offset_bottom = 126.0

[node name="notifStart" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_uk6ft")
pitch_scale = 2.25

[node name="notifAppear" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_ynrl5")
pitch_scale = 1.5
